--- a/package.json
+++ b/package.json
@@ -12,5 +12,10 @@
     "react-dom": "18.2.0",
     "axios": "^1.6.0",
     "natural": "^6.5.0"
+  },
+  "devDependencies": {
+    "typescript": "^5.3.3",
+    "@types/react": "^18.2.15",
+    "@types/node": "^20.11.19"
   }
 }
